--- a/wrangler.toml
+++ b/wrangler.toml
@@ -31,3 +31,10 @@ GROUPS_JSON = """{
   ]
 }"""
 CONFIG_URL = ""
+
+# wrangler.toml (wrangler v3.88.0^)
+[observability.logs]
+enabled = false
+
+
+
